sandc/test/fixtures/astRegression/shouldFail/productions/statement/LoopCond.sand
pub class LoopCond {
    foo() {
        loop cond {
            
        }
    }
}